--- a/block-BJaaiq/code/style.css
+++ b/block-BJaaiq/code/style.css
@@ -1,4 +1,4 @@
-#quotes-container {
+/* #quotes-container {
     height: 400px;
     overflow-y: scroll;
   }
@@ -13,4 +13,4 @@
   .author {
     text-align: right;
     font-style: italic;
-  }
+  } */
