--- a/block-BJaair/code/style.css
+++ b/block-BJaair/code/style.css
@@ -1,50 +1,145 @@
-#notice-board {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-  #notice-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-  }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
-  #notice-form input[type="text"],
-  #notice-form select {
-    padding: 5px;
-    margin: 5px;
-    width: 200px;
-    font-size: 16px;
-  }
+/* css custom */
 
-  #notice-form button {
-    padding: 5px;
-    margin: 5px;
-    font-size: 16px;
-    cursor: pointer;
-  }
 
-  .notice {
-    width: 400px;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-  .notice-title,
-  .notice-category {
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-  }
+input,
+button,
+textarea {
+  box-shadow: none;
+  outline: 0;
+  border: 0;
+}
 
-  .notice-body {
-    margin-top: 10px;
-  }
+a {
+  text-decoration: none;
+}
+
+html {
+  font-size: 16px;
+}
+
+.container {
+  max-width: 1350px;
+  width: 100%;
+  margin: 0 auto;
+  /* padding: 0 2rem; */
+}
+
+/*heading*/
+
+header{
+  text-align: center;
+  background-color: black;
+  color: #ffffff;
+  padding: 2rem 0;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
+/*ul*/
+.container ul{
+  padding: 0 2rem;
+  margin: 1rem;
+}
+ul{
+  display: grid;
+  grid-template-columns: repeat(3, 31%);
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+}
+li{
+  border: 1px solid black;
+  padding: 2rem;
+  font-size:1.3em ;
+  background-color: rgb(238, 90, 35);
+}
+
+li h2{
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+li p{
+ 
+  margin-bottom: 1.3rem;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+/* cards*/
+.add__card{
+  border: 3px solid blue;
+  padding: 2rem;
+  height: auto;
+  width: 25%;
+ margin-left: 30rem;
+ margin-top: 3rem;
+}
+form{
+  padding: 1rem;
+  text-align: center;
+  display: grid;
+}
+.add__card input{
+  border: 1px solid black;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+}
+.add__card button{
+  background-color: black;
+  color: #ffffff;
+  padding: 1rem;
+}
